# nap-plot-tools

./: README.md  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yaml
notebooks/: Example.ipynb
src/nap_plot_tool/: __init__.py  tools.py
src/nap_plot_tools/: __init__.py  cmap.py  napari.yaml  tools.py
src/nap_plot_tools/_tests/: test_tools.py
src/nap_plot_tools/notebooks/: Example.ipynb
