[metadata]
name = nap-plot-tools
version = attr: nap_plot_tools.__version__
description = A NAPari PLOTter TOOLbar and tools for additional functionalities.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zoccoler/nap-plot-tools
author = Marcelo Leomil Zoccoler
author_email = marzoccoler@gmail.com
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/zoccoler/nap-plot-tools/issues
    Documentation = https://github.com/zoccoler/nap-plot-tools#README.md
    Source Code = https://github.com/zoccoler/nap-plot-tools
    User Support = https://github.com/zoccoler/nap-plot-tools/issues

[options]
packages = find:
install_requires =
    numpy
    qtpy
    cmap
    deprecated
    matplotlib

python_requires = >=3.8
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    pyqt5
    deprecated
    napari
    napari-matplotlib


